--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -347,7 +347,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../static/lib/semantic/semantic.min.js"></script>
-
+<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 <script>
 
     $('.ui.dropdown').dropdown({
